--- a/parts/debit.jade
+++ b/parts/debit.jade
@@ -33,24 +33,24 @@ template(name='debit_edit')
                     +smart_tagger
                 .five.wide.center.aligned.column
                     .ui.small.grey.header 100pts = 1 credit
-                    .ui.big.inline.header #{price}p
-                    .ui.inline.grey.header ({{money_format price}}c)
+                    .ui.big.inline.header #{amount}p
+                    .ui.inline.grey.header ({{money_format amount}}c)
                     .ui.big.input
-                        input.point_price(type='number' value=price min='1')
+                        input.point_amount(type='number' value=amount min='1')
                     div
-                    +key_value_edit key='price' value=1
-                    +key_value_edit key='price' value=5
-                    +key_value_edit key='price' value=10
-                    +key_value_edit key='price' value=25
-                    +key_value_edit key='price' value=50
-                    +key_value_edit key='price' value=100
-                    +key_value_edit key='price' value=250
-                    +key_value_edit key='price' value=500
-                    +key_value_edit key='price' value=1000
-                    +key_value_edit key='price' value=2000
-                    +key_value_edit key='price' value=5000
+                    +key_value_edit key='amount' value=1
+                    +key_value_edit key='amount' value=5
+                    +key_value_edit key='amount' value=10
+                    +key_value_edit key='amount' value=25
+                    +key_value_edit key='amount' value=50
+                    +key_value_edit key='amount' value=100
+                    +key_value_edit key='amount' value=250
+                    +key_value_edit key='amount' value=500
+                    +key_value_edit key='amount' value=1000
+                    +key_value_edit key='amount' value=2000
+                    +key_value_edit key='amount' value=5000
                     .spacer
-                    .ui.center.aligned.basic.egment
+                    .ui.center.aligned.basic.segment
                         if can_submit
                             .ui.green.massive.circular.circular.icon.button.submit
                                 i.big.send.icon
@@ -71,7 +71,7 @@ template(name='debit_view')
                             |#{_author.username}
                 .five.wide.column
                     .ui.huge.center.aligned.inline.header
-                        |#{price}p
+                        |#{amount}p
                     if is_dev
                         +remove_button
                     .f14
