--- a/client/post.jade
+++ b/client/post.jade
@@ -1,7 +1,7 @@
 template(name='post_card')
     .ui.stackable.grid
         .four.wide.column
-            a.ui.fluid.rounded.image.pointer(href="/post/#{_id}/view")
+            a.ui.fluid.rounded.image.pointer(href="/m/post/#{_id}/view")
                 if watson.metadata.image
                     img(src=watson.metadata.image class='invert')    
                 else if is_youtube
@@ -12,14 +12,14 @@ template(name='post_card')
             if youtube_id
                 +youtube_view key='youtube_id' direct=true
             if image_id
-                a.image(href="/post/#{_id}/view")
+                a.image(href="/m/post/#{_id}/view")
                     img.ui.rounded.image(src="{{c.url image_id }}" class='invert')
             if thumbnail
-                a.image(href="/post/#{_id}/view")
+                a.image(href="/m/post/#{_id}/view")
                     img.ui.rounded.image(src=thumbnail class='invert')
         .twelve.wide.column
             .content
-                a.ui.header.pointer(href="/post/#{_id}/view" class=post_header_class)
+                a.ui.header.pointer(href="/m/post/#{_id}/view" class=post_header_class)
                     if key_value_is 'model' 'wikipedia'
                         i.wikipedia.grey.icon
                     else if key_value_is 'model' 'reddit'
@@ -43,7 +43,7 @@ template(name='post_card')
                     .ui.label #{rd.ups} ups
                 +autotag
                 +vote
-                // a(href="/post/#{_id}/view")
+                // a(href="/m/post/#{_id}/view")
                 //     i.right.chevron.circular.link.big.icon
                 if is_admin
                     +print_this
@@ -58,9 +58,9 @@ template(name='post_card')
                         // i.plus.link.grey.icon.plus_tag(title='pay a point to promote tag')
                 |#{when}
                 if can_edit 
-                    a.ui.circular.icon.button(href="/post/#{_id}/edit")
+                    a.ui.circular.icon.button(href="/m/post/#{_id}/edit")
                         i.pencil.icon
-                a.ui.icon.button(href="/post/#{_id}/view")
+                a.ui.icon.button(href="/m/post/#{_id}/view")
                     i.chevron.right.icon
                 // +call_watson mode='url' key='url'
                 // if watson
@@ -68,59 +68,32 @@ template(name='post_card')
             
         // .ui.divider
     
-template(name='one_post_view')
-    .ui.fluid.card.view_post
-        if watson.metadata.image
-            img.ui.image(src=watson.metadata.image class='invert')    
-        img.ui.image(src=url class='invert')    
-
-        if youtube_id
-            +youtube_view key='youtube_id' direct=true
-        else if image_id
-            a.image(href="/post/#{_id}/view")
-                img.ui.image(src="{{c.url image_id width=800 crop='fill'}}" class='invert') 
-        .content
-            a.inline.header(href="/post/#{_id}/view" class=post_header_class)
-                i.right.chevron.circular.icon
-                |#{title}
-            .meta
-                |#{when}
-            .description.f11
-                if tone
-                    +tone
-                else if body
-                    |{{nl2br body}}
-                else if description
-                    |!{description}
-            .description
-                +vote
-                +array_edit key='tags' direct=true
-
-                each tags
-                    .ui.compact.large.button.add_tag #{this}
-
-                 
-template(name='post_section_button')                 
-    .ui.circular.compact.button 
-        if icon 
-            i.icon(class=icon)
-        |#{label}
-
-
 
 template(name='post_edit')
     with current_doc
         .ui.stackable.padded.grid
             .row 
                 .eight.wide.column
-                    a.ui.icon.circular.large.button(href="/post/#{_id}/view" title='save' class='invert')
+                    a.ui.icon.circular.large.button(href="/m/post/#{_id}/view" title='save' class='invert')
                         i.checkmark.big.icon
                     .ui.inline.large.header 
                         small edit post
                         // |#{title}
+                    div
                     +image_edit key='image_id' label='image' direct=true
+                    div
+                    +boolean_edit key='nsfw' label='nsfw' direct=true
+                    +boolean_edit key='original' label='original content' direct=true
+                    div
+                    +link_edit key='link' label='link' direct=true
+                    +date_edit key='date' label='date' direct=true
+                    div
+                    +boolean_edit key='has_recipient' label='has recipient' direct=true
+                    if has_recipient
+                        +single_user_edit key='recipient_id' key2='recipient_username' label='recipient' direct=true
+                        +number_edit key='point_amount' label='point amount' direct=true
                 .eight.wide.column
-                    // |tag = -1p
+                    |tag = -1p
                     +smart_tagger
                     +textarea_edit key='body' label='body' direct=true
                     if description
@@ -163,7 +136,7 @@ template(name='post_view')
                     if watson.metadata.image
                         img.ui.rounded.image(src=watson.metadata.image class='invert')    
                     if can_edit
-                        a.ui.circular.icon.button.edit_post(href="/post/#{_id}/edit")
+                        a.ui.circular.icon.button.edit_post(href="/m/post/#{_id}/edit")
                             i.large.pencil.icon
                     +vote
                     .ui.inline.small.grey.header #{when}
