add custom tribes again, have fun

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -21,8 +21,8 @@ template(name='nav')
                 //     i.clock.icon
                 a.icon.item(href="/shop")
                     i.store.large.icon
-                a.icon.item(href="/users")
-                    i.users.large.icon
+                a.icon.item(href="/tribes")
+                    i.fire.large.icon
                 a.icon.item(href="/one")
                     i.circle.large.icon
             else
