--- a/client/post.jade
+++ b/client/post.jade
@@ -131,7 +131,7 @@ template(name='post_view')
                                 |!{description}
                         // +watson_view
                         // if is_admin
-                        //     +viewing
+                        +viewing
                 .six.wide.column.scrolling
                     if watson.metadata.image
                         img.ui.rounded.image(src=watson.metadata.image class='invert')    
