--- a/client/styles.css
+++ b/client/styles.css
@@ -643,9 +643,9 @@ body {
     /* text-transform: capitalize !important; */
     /* font-family: 'Raleway', sans-serif !important; */
     /* font-family: 'Montserrat', sans-serif !important; */
-     /*font-family: 'Roboto', sans-serif !important; */
+     font-family: 'Roboto', sans-serif !important; 
     /* font-family: 'Lato+Mono', sans-serif !important; */
-    font-family: 'Ubuntu', sans-serif !important;
+    /*font-family: 'Ubuntu', sans-serif !important;*/
 }
 
 @keyframes fadein {
