glow and pointer on nav, decent tribe search and filter, tribe_view init search and remove menu

--- a/client/home.jade
+++ b/client/home.jade
@@ -87,13 +87,13 @@ template(name='home')
 
 
 template(name='unselect_tag')
-    a.unselect_tag.ui.black.big.image.label.select_termn
+    a.unselect_tag.ui.black.big.image.zoom.pointer.label.select_termn
         if term
             img.ui.avatar.compact.image(src=term.watson.metadata.image class=currentUser.invert_class)    
         | #{this}
 
 template(name='tag_selector')
-    a.ui.big.image.label.select_tag.select_term(href='#')
+    a.ui.big.image.zoom.pointer.label.select_tag.select_term(href='#')
         // img.ui.avatar.compact.image(src="{{c.url term.image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
         // img.ui.avatar.compact.image(src=term.rd.thumbnail class=currentUser.invert_class)
         if term
